Fix visual alignment of hash art

--- a/src/assets/styles/partials/pages/_home.scss
+++ b/src/assets/styles/partials/pages/_home.scss
@@ -20,5 +20,6 @@
 
   @include mixins.desktop {
     display: unset;
+    padding-block-start: 1ex;
   }
 }
